--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@google/genai": "^1.3.0"
+    "@google/genai": "^1.3.0",
+    "i18next": "^23.10.0",
+    "react-i18next": "^14.1.0",
+    "i18next-http-backend": "^2.5.0",
+    "i18next-browser-languagedetector": "^7.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
