--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.3.0",
-    "@polkadot/extension-dapp": "^0.46.9",
-    "@polkadot/keyring": "^12.6.2",
-    "@polkadot/util": "^12.6.2",
-    "@polkadot/util-crypto": "^12.6.2",
-    "@vercel/analytics": "^1.5.0",
-    "i18next": "^23.10.0",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-i18next": "^14.1.0"
+    "@google/genai": "^1.3.0",
+    "i18next": "^23.10.0",
+    "react-i18next": "^14.1.0",
+    "i18next-http-backend": "^2.5.0",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "@polkadot/extension-dapp": "^0.46.9",
+    "@polkadot/util": "^12.6.2",
+    "@polkadot/keyring": "^12.6.2",
+    "@polkadot/util-crypto": "^12.6.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
